aumentao font-size dos label de todos os formularios

--- a/pmsb_web/conta/static/css/style.css
+++ b/pmsb_web/conta/static/css/style.css
@@ -14425,4 +14425,8 @@ body {
   box-shadow:0 0 0 .2rem rgba(220,53,69,.5)
 }
 
+label {
+  font-size: 20px;
+}
+
 /*# sourceMappingURL=style.css.map */
