--- a/pmsb_web/conta/static/css/style.css
+++ b/pmsb_web/conta/static/css/style.css
@@ -4447,6 +4447,7 @@ input[type="button"].btn-block {
 
 .card-img-top {
   width: 100%;
+  height: 250px;
   border-top-left-radius: calc(0.25rem - 1px);
   border-top-right-radius: calc(0.25rem - 1px);
 }
@@ -14427,6 +14428,10 @@ body {
 
 label {
   font-size: 20px;
+}
+
+.dTreeNode {
+  font-size: 16px;
 }
 
 /*# sourceMappingURL=style.css.map */
