--- a/pmsb_web/relatorios/templates/relatorios/create_bloco.html
+++ b/pmsb_web/relatorios/templates/relatorios/create_bloco.html
@@ -2,7 +2,8 @@
 <form method="post" enctype="multipart/form-data">
     {% csrf_token %}
     <div class="card-body p-4">
-    {% include "includes/form.html" with form=form %}
+    <h2 style="text-align: center;">{{relatorio_object}}</h2>
+    <hr>{% include "includes/form.html" with form=form %}
     <button type="submit" class="btn btn-primary">Criar</button>
     <a class="btn btn-primary" href="{% url 'relatorios:detail_relatorio' relatorio_object.pk %}" style="float:right;">Voltar</a>
     </div>
