--- a/pmsb_web/relatorios/templates/relatorios/create_figura.html
+++ b/pmsb_web/relatorios/templates/relatorios/create_figura.html
@@ -2,9 +2,12 @@
 <form method="post" enctype="multipart/form-data">
     {% csrf_token %}
     <div class="card-body p-4">
+    <h2 style="text-align: center;">{{relatorio_object}}</h2>
+    <h5 class="text-muted" style="text-align: center;">Inserir figuras para este relatório</h5>
+    <hr>
     {% include "includes/form.html" with form=form %}
-    <a class="btn btn-primary" href="{% url "relatorios:list_figura" relatorio_object.pk %}">Voltar</a>
     <button type="submit" class="btn btn-primary">Criar</button>
+    <a class="btn btn-primary" href="{% url "relatorios:list_figura" relatorio_object.pk %}">Voltar</a>
     </div>
 </form>
 {% endblock %}
