--- a/pmsb_web/relatorios/templates/relatorios/list_relatorio.html
+++ b/pmsb_web/relatorios/templates/relatorios/list_relatorio.html
@@ -8,14 +8,29 @@
     </a>
 </div>
 <div class="card-body">
+    <h2 style="text-align: center;">Lista de seus relatórios</h2>
+    <hr>
     <ul class="list-group">
         {% for r in object_list %}{% comment %} dono:{{r.usuario}} {% endcomment %}
-        <li class="list-group-item"> Título: {{r}}
-        <a href="{% url 'relatorios:detail_relatorio' r.pk %}"><span class="badge badge-secondary">Detalhes</span></a>
+        <li class="list-group-item" style="font-size: 16px;" > <b>Título:</b>  {{r}}
+            <a href="{% url 'relatorios:detail_relatorio' r.pk %}"><span class="badge badge-secondary">Gerênciar índices</span></a>
+            <a href="{% url 'relatorios:update_relatorio' r.pk %}"><span class="badge badge-secondary">Editar título e descrição</span></a>
+            <a href="{% url 'relatorios:delete_relatorio' r.pk %}"><span class="badge badge-danger">Excluir relatório</span></a>
+            <div class="row">
+                <div class="col-sm">
+                <b>Descrição:</b> {{r.descricao}}
+                </div>
+                <div class="col-sm" style="text-align:right;">
+                <b>Data de criação:</b> {{r.criado_em}}
+                </div>
+            </div>
         </li>
+
+
         {% empty %}
         <li class="list-group-item">Nenhum relatório</li>
         {% endfor %}
-    </ul>
+</div>
+</ul>
 </div>
 {% endblock %}
