--- a/pmsb_web/relatorios/templates/relatorios/update_relatorio.html
+++ b/pmsb_web/relatorios/templates/relatorios/update_relatorio.html
@@ -3,8 +3,8 @@
     {% csrf_token %}
     <div class="card-body p-4">
         {% include "includes/form.html" with form=form %}
-        <button type="submit" class="btn btn-primary">Criar</button>
-        <a class="btn btn-primary" href="{% url 'relatorios:detail_relatorio' relatorio_object.pk %}" style="float:right;">Voltar</a>
+        <button type="submit" class="btn btn-primary">Editar</button>
+        <a class="btn btn-primary" href="{% url 'relatorios:list_relatorio' %}" style="float:right;">Voltar</a>
     </div>
 </form>
 {% endblock %}
