--- a/pmsb_web/relatorios/templates/relatorios/detail_relatorio.html
+++ b/pmsb_web/relatorios/templates/relatorios/detail_relatorio.html
@@ -6,9 +6,9 @@
     <hr>
     <p>
         <a class="btn btn-primary" href="{% url 'relatorios:list_figura' object.pk %}">
-            <i aria-hidden="true" data-hidden="true" class="fa fa-image" style="color:white;"></i>Gerenciar Figuras</a>
+            <i aria-hidden="true" data-hidden="true" class="nav-icon fa fa-image" style="color:white;"></i>Gerenciar Figuras</a>
         <a class="btn btn-primary" href="#">
-            <i aria-hidden="true" data-hidden="true" class="fa fa-file-text-o fa-fw" style="color:white;"></i>Visualizar PDF</a>
+            <i aria-hidden="true" data-hidden="true" class="nav-icon fa fa-file-text-o" style="color:white;"></i>Visualizar PDF</a>
         <a class="btn btn-primary" href="{% url 'relatorios:list_relatorio' %}" style="float:right;">Voltar</a>
     </p>
     <p>
@@ -16,8 +16,8 @@
     </p>
 
     <p>
-        <a href="{% url 'relatorios:create_bloco' object.pk  %}">
-            <span class="badge badge-success">Inserir nível</span>
+        <a class="btn btn-primary" href="{% url 'relatorios:create_bloco' object.pk  %}">
+            <i aria-hidden="true" data-hidden="true" class="nav-icon fa fa-plus" style="color:white;"></i>Inserir nível
         </a>
     </p>
 
@@ -31,7 +31,7 @@
         d.add(0, -1, 'Índice');
 
         {% for bloco in object.blocos.all %}
-        d.add('{{bloco.id}}', '{{bloco.nivel_superior.id}}', '{{bloco.titulo}} - <a href="{% url 'relatorios:update_bloco' bloco.pk %}"><span class="badge badge-success">Editar índice</span></a> - <a href="{% url 'relatorios:update_text_bloco' bloco.pk %}"><span class="badge badge-success">Inserir Texto</span></a> - <a href="{% url 'relatorios:create_bloco_nivel_superior' object.pk bloco.pk  %}"><span class="badge badge-success">Inserir subnível</span></a>');
+        d.add('{{bloco.id}}', '{{bloco.nivel_superior.id}}', '{{bloco.titulo}} - <a href="{% url 'relatorios:update_bloco' bloco.pk %}"><span class="badge badge-secondary">Editar Índice</span></a> - <a href="{% url 'relatorios:update_text_bloco' bloco.pk %}"><span class="badge badge-secondary">Inserir Texto</span></a> - <a href="{% url 'relatorios:create_bloco_nivel_superior' object.pk bloco.pk  %}"><span class="badge badge-secondary">Inserir Subnível</span></a> - <a href="{% url 'relatorios:delete_bloco' bloco.pk  %}"><span class="badge badge-danger">Excluir nível</span></a>');
         {% empty %}
         <p>
             Sem itens
