desabilita funcionalidade de edição do texto do bloco nesta versão, esperar um pouco até liberar

--- a/pmsb_web/relatorios/templates/relatorios/detail_relatorio.html
+++ b/pmsb_web/relatorios/templates/relatorios/detail_relatorio.html
@@ -26,12 +26,18 @@
         <a href="javascript: d.openAll();">Expandir tudo</a> |
         <a href="javascript: d.closeAll();">Contrair tudo</a>
     </small>
+    
     <script type="text/javascript">
+
         d = new dTree('d');
         d.add(0, -1, 'Índice');
 
         {% for bloco in object.blocos.all %}
+        {% comment %}
         d.add('{{bloco.id}}', '{{bloco.nivel_superior.id}}', '{{bloco.titulo}} - <a href="{% url 'relatorios:update_bloco' bloco.pk %}"><span class="badge badge-secondary">Editar Índice</span></a> - <a href="{% url 'relatorios:update_text_bloco' bloco.pk %}"><span class="badge badge-secondary">Inserir Texto</span></a> - <a href="{% url 'relatorios:create_bloco_nivel_superior' object.pk bloco.pk  %}"><span class="badge badge-secondary">Inserir Subnível</span></a> - <a href="{% url 'relatorios:delete_bloco' bloco.pk  %}"><span class="badge badge-danger">Excluir nível</span></a>');
+        {% endcomment %}
+    
+        d.add('{{bloco.id}}', '{{bloco.nivel_superior.id}}', '{{bloco.titulo}} - <a href="{% url 'relatorios:update_bloco' bloco.pk %}"><span class="badge badge-secondary">Editar Índice</span></a> - <a href="{% url 'relatorios:create_bloco_nivel_superior' object.pk bloco.pk  %}"><span class="badge badge-secondary">Inserir Subnível</span></a> - <a href="{% url 'relatorios:delete_bloco' bloco.pk  %}"><span class="badge badge-danger">Excluir nível</span></a>');
         {% empty %}
         <p>
             Sem itens
