--- a/pmsb_web/relatorios/templates/relatorios/list_figura.html
+++ b/pmsb_web/relatorios/templates/relatorios/list_figura.html
@@ -19,6 +19,9 @@
                         <div class="col-sm">
                             <p class="card-text content text-justify text-truncate">Legenda: {{figura.legenda}} </p>
                         </div>
+                        <div class="col-sm">
+                            <p class="card-text content text-justify text-truncate">Referência: {{figura.pk}} </p>
+                        </div>
                     </div>
                     <br>
                     <div class="row">
