--- a/pmsb_web/relatorios/templates/relatorios/delete_figura.html
+++ b/pmsb_web/relatorios/templates/relatorios/delete_figura.html
@@ -4,7 +4,7 @@
     <div class="card-body p-4">
         <h2 style="text-align: center;">Confirmar exclusão da imagem</h2>
         <hr>
-        <input class="btn btn-danger" type="submit" value="Deletar"/>
+        <input class="btn btn-danger" type="submit" value="Confirmar exclusão"/>
         <a class="btn btn-primary" style="float:right;" href="{% url 'relatorios:list_figura' object.relatorio.pk %}">Cancelar</a>
     </div>
 </form>
