--- a/pmsb_web/relatorios/templates/relatorios/update_relatorio.html
+++ b/pmsb_web/relatorios/templates/relatorios/update_relatorio.html
@@ -4,7 +4,7 @@
     <div class="card-body p-4">
         <h2 style="text-align: center;">{{object}}</h2>
         <hr>{% include "includes/form.html" with form=form %}
-        <button type="submit" class="btn btn-primary">Editar</button>
+        <button type="submit" class="btn btn-primary">Salvar</button>
         <a class="btn btn-primary" href="{% url 'relatorios:list_relatorio' %}" style="float:right;">Voltar</a>
     </div>
 </form>
