--- a/pmsb_web/relatorios/templates/relatorios/update_bloco.html
+++ b/pmsb_web/relatorios/templates/relatorios/update_bloco.html
@@ -2,7 +2,7 @@
 <form method="post" enctype="multipart/form-data">
     {% csrf_token %}
     <div class="card-body p-4">
-        <h2></h2>
+        <h2>{{object.titulo}}</h2>
         {% include "includes/form.html" with form=form %}
         <button type="submit" class="btn btn-primary">Salvar</button>
         <a class="btn btn-primary" href="{% url 'relatorios:detail_relatorio' object.relatorio.pk %}" style="float:right;">Voltar</a>
