trocando relatorio por produtos

--- a/pmsb_web/conta/templates/dashboard/index.html
+++ b/pmsb_web/conta/templates/dashboard/index.html
@@ -63,7 +63,7 @@
           </li>
           <li class="nav-item nav-dropdown ">
             <a class="nav-link nav-dropdown-toggle" href="#">
-                <i class="fa fa-sitemap"></i>Organograma</a>
+                <i class="nav-icon fa fa-sitemap"></i>Organograma</a>
             <ul class="nav-dropdown-items">
               <li class="nav-item">
                 <a class="nav-link" href="{% url 'conta:departamento_tree' %}">
@@ -96,7 +96,7 @@
           {% if 'relatorios' in perms %}
           <li class="nav-item nav-dropdown ">
             <a class="nav-link nav-dropdown-toggle" href="#">
-              <i class="nav-icon icon-note"></i>Relatórios</a>
+              <i class="nav-icon icon-note"></i>Produtos</a>
               <ul class="nav-dropdown-items">                
                 <li class="nav-item">
                   <a class="nav-link" href="{% url 'relatorios:list_relatorio' %}">
