--- a/pmsb_web/relatorios/templates/relatorios/list_relatorio.html
+++ b/pmsb_web/relatorios/templates/relatorios/list_relatorio.html
@@ -1,21 +1,21 @@
 {% extends "base/base.html" %} {% block conteudo %}
 
 <div class="card-header">
-    <i class="nav-icon icon-note"></i> Relatórios
+    <i class="nav-icon icon-note"></i> Produtos
     <a class="btn btn-primary" style="float: right;" href="{% url 'relatorios:create_relatorio'%}">
         <i class="fa fa-tasks"></i>
-        Novo Relatório
+        Novo Produto
     </a>
 </div>
 <div class="card-body">
-    <h2 style="text-align: center;">Lista de seus relatórios</h2>
+    <h2 style="text-align: center;">Lista de seus Produtos</h2>
     <hr>
     <ul class="list-group">
         {% for r in object_list %}{% comment %} dono:{{r.usuario}} {% endcomment %}
         <li class="list-group-item" style="font-size: 16px;" > <b>Título:</b>  {{r}}
             <a href="{% url 'relatorios:detail_relatorio' r.pk %}"><span class="badge badge-secondary">Gerênciar índices</span></a>
             <a href="{% url 'relatorios:update_relatorio' r.pk %}"><span class="badge badge-secondary">Editar título e descrição</span></a>
-            <a href="{% url 'relatorios:delete_relatorio' r.pk %}"><span class="badge badge-danger">Excluir relatório</span></a>
+            <a href="{% url 'relatorios:delete_relatorio' r.pk %}"><span class="badge badge-danger"><i class="nav-icon fa fa-trash" style="color:white; margin-right:1px;"></i>Excluir produto</span></a>
             <div class="row">
                 <div class="col-sm">
                 <b>Descrição:</b> {{r.descricao}}
