copiar referencia so o id da imagem

--- a/pmsb_web/relatorios/templates/relatorios/list_figura.html
+++ b/pmsb_web/relatorios/templates/relatorios/list_figura.html
@@ -23,7 +23,7 @@
                     <br>
                     <div class="row">
                         <div class="col-sm">
-                            <button class="btn btn-warning" onclick="copyStringToClipboard(this.value)" value="{{figura.imagem.url}}">Copiar Referência</button>
+                            <button class="btn btn-warning" onclick="copyStringToClipboard(this.value)" value="{{figura.pk}}">Copiar Referência</button>
                         </div>
                     </div>
                     <br>
