FIX label no include graphics da imagem

--- a/pmsb_web/relatorios/templates/relatorios/list_figura.html
+++ b/pmsb_web/relatorios/templates/relatorios/list_figura.html
@@ -23,7 +23,7 @@
                     <br>
                     <div class="row">
                         <div class="col-sm">
-                            <button class="btn btn-warning" onclick="copyStringToClipboard(this.value)" value="\begin{figure}[!hb]\centering\includegraphics[scale=1]{ {{figura.pk}} }\caption{ {{figura.legenda}} }\label{uuid}\end{figure}">Copiar Referência</button>
+                            <button class="btn btn-warning" onclick="copyStringToClipboard(this.value)" value="\begin{figure}[!hb]\centering\includegraphics[scale=1]{ {{figura.pk}} }\caption{ {{figura.legenda}} }\label{ {{figura.pk}} }\end{figure}">Copiar Referência</button>
                         </div>
                     </div>
                     <br>
