adiciona escolha na lista de ordenação de perguntas de um questionario

--- a/pmsb_web/questionarios/templates/questionarios/ordenar_detail.html
+++ b/pmsb_web/questionarios/templates/questionarios/ordenar_detail.html
@@ -18,11 +18,21 @@
             <p>
                 <span id="ordem_{{pergunta_do_questionario.pk}}">{{pergunta_do_questionario.ordem}}</span>
                 -
-                {{pergunta_do_questionario.pergunta.variavel}}
+                {{pergunta_do_questionario.pergunta.variavel}}:{{pergunta_do_questionario.pergunta.verbose_name_tipo}}
             </p>
             <p> 
                 {{pergunta_do_questionario.pergunta.texto}}
             </p>
+            {% if pergunta_do_questionario.pergunta.tipo == 0 %}
+            <p>Escolhas:</p>
+            {% for escolha in pergunta_do_questionario.pergunta.escolhas %}
+            <p>
+                {{escolha.texto}}
+            {% empty%}
+                Sem escolhas
+            {% endfor%}
+            </p>
+            {% endif %}
         </li>
         {% empty %}
         <li class="list-group-item">Nenhuma pergunta</li>
