--- a/pmsb_web/relatorios/templates/relatorios/detail_relatorio.html
+++ b/pmsb_web/relatorios/templates/relatorios/detail_relatorio.html
@@ -25,13 +25,12 @@
         <a href="javascript: d.openAll();">Expandir tudo</a> |
         <a href="javascript: d.closeAll();">Contrair tudo</a>
     </small>
-    
     <script type="text/javascript">
 
         d = new dTree('d');
-        d.add(0, -1, 'Índice');
+        d.add(0, -1, 'Índices');
 
-        {% for bloco in object.blocos.all %}
+        {% for bloco in blocos_nfd %}
         {% comment %}
         d.add('{{bloco.id}}', '{{bloco.nivel_superior.id}}', '{{bloco.titulo}} - <a href="{% url 'relatorios:update_bloco' bloco.pk %}"><span class="badge badge-secondary ">Editar Índice</span></a> - <a href="{% url 'relatorios:update_text_bloco' bloco.pk %}"><span class="badge badge-secondary">Inserir Texto</span></a> - <a href="{% url 'relatorios:create_bloco_nivel_superior' object.pk bloco.pk  %}"><span class="badge badge-secondary">Inserir Subnível</span></a> - <a href="{% url 'relatorios:delete_bloco' bloco.pk  %}"><span class="badge badge-warning">X</span></a>');
         {% endcomment %}
@@ -43,6 +42,7 @@
         </p>
         {% endfor %}
         document.write(d);
-    </script> {% endblock %}
+    </script> 
+    {% endblock %}
 
 </div>
