--- a/pmsb_web/conta/templates/dashboard/index.html
+++ b/pmsb_web/conta/templates/dashboard/index.html
@@ -61,6 +61,7 @@
               </li>
             </ul>
           </li>
+          {% if 'conta' in perms %}
           <li class="nav-item nav-dropdown ">
             <a class="nav-link nav-dropdown-toggle" href="#">
                 <i class="nav-icon fa fa-sitemap"></i>Organograma</a>
@@ -79,6 +80,7 @@
               </li>
             </ul>
           </li>
+          {% endif %}
           {% if 'questionarios' in perms %}
           <li class="nav-item ">
             <a {% if request.resolver_match.app_names.0 == 'questionarios' %} class="nav-link  active" {% else %} class="nav-link" {% endif%} href="{% url 'questionarios:list' %} ">
